fix(css): overflow for tasks

--- a/styles.css
+++ b/styles.css
@@ -194,19 +194,19 @@ label {
 
 section {
   width: 100%;
-  height: 100%;
   display: flex;
   gap: 5px;
 }
 
 .content {
   width: 100%;
+  max-height: 50vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 10px;
+  overflow: auto;
 }
+
 .todo-item {
   background: var(--emerald);
   display: flex;
